[package]
name = "being-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "beinglib"
[dependencies]
tonic = "0.7.2"
prost = "0.10.3"
tokio-stream = "0.1.8"
mongodb = { version = "2.2.1", default-features = false, features = ["sync"] }
tokio = {version="1.18.2",features=["full"]}
redis = {version="0.21.5", features=["async-std-comp"]}
serde = {version = "1.0.137", features = ["derive"] }
bson = "2.2.0"
dotenv = "0.15.0"
chrono = "0.4.19"
jsonwebtoken = "8.1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
bcrypt = "0.13.0"
futures-util = "0.3.21"
regex = "1.5"
reqwest = { version = "0.11.10", features = ["blocking", "json"]}

[build-dependencies]
tonic-build = "0.7.2"